@@ -269,6 +269,14 @@ BOOL Manager::ExitAll()
 	return TRUE;
 }
 
+void Manager::RefreshAll()
+{
+	if (!m_windows.empty())
+	{
+		RefreshWindow(m_windows.front());
+	}
+}
+
 void Manager::CloseAll()
 {
 	_MANAGER(CleverSysLog clv(L"Manager::CloseAll()"));
