@@ -1,4 +1,8 @@
-﻿shmuel 14.03.2016 11:39:07 +0200 - build 4580
+﻿drkns 14.03.2016 23:51:08 +0200 - build 4581
+
+1. Вернём поведение ACTL_REDRAWALL, существовавшее до 4545.
+
+shmuel 14.03.2016 11:39:07 +0200 - build 4580
 
 1. При выводе на экран меню "Критерий сортировки" (CtrlF12) указатель ставится на текущую сортировку.
 
